--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "src/python-cpp-cmake/pybind11"]
-	path = src/python-cpp-cmake/pybind11
-	url = git@github.com:pybind/pybind11.git
-[submodule "src/cmake-oidn/pybind11"]
-	path = src/cmake-oidn/pybind11
+	path = externals/pybind11
 	url = git@github.com:pybind/pybind11.git
