--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/python-cpp-cmake/pybind11"]
+[submodule "externals/pybind11"]
 	path = externals/pybind11
 	url = git@github.com:pybind/pybind11.git
